--- a/web/css/home.css
+++ b/web/css/home.css
@@ -103,8 +103,9 @@
 .info_left_p,.info_right_p{ position:absolute; z-index:0; width:500px; left:100px; top:0; display:none; height:350px; background:#eee;}
 
 
-.top_menu{ height:30px; width:1200px; margin:0 auto; background:#ff3d29; padding:0 30px;}
-.weather{ color:#fff;}
+.top_menu{ height:30px; width:1160px; margin:0 auto; background:#ff3d29; padding:0 20px; color:#fff;}
+.top_login{ height:30px; line-height:30px; float:left; margin-left:30px;}
+.weather{ float:left; line-height:30px;}
 
 
 *{ font-family: "微软雅黑","Arail";transition:all 0.3s ease;box-sizing:content-box;}
