--- a/web/css/category_list.css
+++ b/web/css/category_list.css
@@ -21,7 +21,8 @@
 .info_left_p,.info_right_p{ position:absolute; z-index:0; width:500px; left:100px; top:0; display:none; height:350px; background:#eee;}
 
 .top_nav{ float:right;}
-.top_nav a{ display:block; line-height:30px; padding:0 10px;}
+.top_nav a{ display:block; line-height:30px; padding:0 10px; color:#777;}
+.top_nav a:hover,.top_menu a:hover{ color:#ff3d29;}
 .top_nav ul,.top_nav li{list-style:none; margin:0; padding:0;}
 .top_nav > ul > li{ float:left; position:relative;}
 .top_nav > ul > li > ul { position:absolute; left:0; display:none; border:#ccc 1px solid; background:#fff; box-shadow:0px 0px 5px 0px #ccc;}
@@ -30,6 +31,7 @@
 
 /*顶部菜单*/
 .top_menu{ height:30px; width:1160px; margin:0 auto; padding:0 20px; color:#666;}
+.top_menu a{color:#777;}
 .top_menu_bg{ height:30px; background:#eee;}
 .top_login{ height:30px; line-height:30px; float:left; margin-left:30px;}
 .weather{ float:left; line-height:30px;}
