--- a/web/css/category_list.css
+++ b/web/css/category_list.css
@@ -1,24 +1,17 @@
-.info_index{ min-height:500px; width:1200px; margin:0 auto; background:#fff;}
-.info_left{ float:left; width:600px; position:relative;}
-.info_right{ float:right; width:600px; position:relative;}
+.info_index{ min-height:550px; width:1160px; margin:0 auto; background:#fff; padding:20px;}
+.info_left{ float:left; width:580px;}
+.info_right{ float:right; width:580px;}
 
-.info_left > div{ width:100px;}
-.info_left > div a{ display:block;}
-.info_left > div p a{ float:left;}
-.info_left > div:hover{ background:#ff3d29;}
-.info_left > div:hover a{ color:#fff;}
-.info_left > div:hover p{ display:block;}
-.info_left > div:hover p a{ color:#333; text-decoration:underline;}
+.info_left > div,.info_right > div{ width:100px; position:relative; height:39px; padding:0;}
+.info_left > div > a,.info_right > div > a{ position:absolute; width:74px;border-radius:0; border-right:none; transition:none; color:#777;}
+.info_left > div a,.info_right > div a{ display:block; font-size:18px;}
+.info_left > div p a,.info_right > div p a{ float:left;}
+.info_left > div:hover > a,.info_right > div:hover > a{ border:#aaa 1px solid; color:#ff3d29; background:#eee; border-right:none;}
+.info_left > div:hover p,.info_right > div:hover p{ display:block;}
+.info_left > div:hover p a,.info_right > div:hover p a{ color:#333; text-decoration:underline;}
+.info_left > div > p a:hover,.info_right > div > p a:hover{ color:#ff3d29;}
 
-.info_right > div{ width:100px;}
-.info_right > div a{ display:block;}
-.info_right > div p a{ float:left;}
-.info_right > div:hover{ background:#ff3d29;}
-.info_right > div:hover a{ color:#fff;}
-.info_right > div:hover p{ display:block;}
-.info_right > div:hover p a{ color:#333; text-decoration:underline;}
-
-.info_left_p,.info_right_p{ position:absolute; z-index:0; width:500px; left:100px; top:0; display:none; height:350px; background:#eee;}
+.info_left_p,.info_right_p{ position:absolute; width:450px; left:98px; top:0; display:none; min-height:150px; background:#eee; border:#aaa 1px solid;}
 
 .top_nav{ float:right;}
 .top_nav a{ display:block; line-height:30px; padding:0 10px; color:#777;}
@@ -32,7 +25,7 @@
 /*顶部菜单*/
 .top_menu{ height:30px; width:1160px; margin:0 auto; padding:0 20px; color:#666;}
 .top_menu a{color:#777;}
-.top_menu_bg{ height:30px; background:#eee;}
+.top_menu_bg{ height:30px; background:#eee; width:100%; min-width:1200px;}
 .top_login{ height:30px; line-height:30px; float:left; margin-left:30px;}
 .weather{ float:left; line-height:30px;}
 
@@ -43,3 +36,8 @@
 .list_form_road_div2 .list_form_road_lock2{background: url('../images/list_form_road_lock.png');}
 .list_form_road_div2 p{ float: left; height: 30px; line-height: 30px; font-size: 20px; color: #666; padding-left:20px}
 .list_form_road_gt2{ float: left;height: 30px; line-height: 30px; font-size: 15px; color: #666; margin:0 20px; width: 30px; background: url('../images/list_form_road_gt.png'); }
+
+
+
+.info_title{ width:1160px; height:30px; padding:20px 0; margin:0 auto;}
+.info_left_title,.info_right_title{ float:left; width:580px; text-align:center; font-size:24px; font-weight:800; color:#666;}
