--- a/web/css/category_list.css
+++ b/web/css/category_list.css
@@ -41,3 +41,7 @@
 
 .info_title{ width:1160px; height:30px; padding:20px 0; margin:0 auto;}
 .info_left_title,.info_right_title{ float:left; width:580px; text-align:center; font-size:24px; font-weight:800; color:#666;}
+
+
+
+#upload_form span,#upload_form button{ display:block; float:left;}
