--- a/web/css/form.css
+++ b/web/css/form.css
@@ -36,3 +36,5 @@
 .list_form_road_div .list_form_road_lock{background: url('../images/list_form_road_lock.png');}
 .list_form_road_div p{ float: left; height: 30px; line-height: 30px; font-size: 20px; color: #666; padding-left:20px}
 .list_form_road_gt{ float: left;height: 30px; line-height: 30px; font-size: 15px; color: #666; margin:0 20px; width: 30px; background: url('../images/list_form_road_gt.png'); }
+
+.upload_iframe{ margin-left:170px; height:40px; width:600px; padding:0;}
