初步搜索功能

--- a/web/css/home.css
+++ b/web/css/home.css
@@ -1,3 +1,4 @@
+@charset "utf-8";
 .clear{ clear:both;}
 .index_ad1{ width:900px; height: 400px; margin-bottom: 10px; overflow: hidden;}
 .banner{position: relative;}
